fixed tooltip going out of screen

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,14 @@ img.profile {
     fill: rgb(255, 74, 67);
 }
 
+.democrat-b {
+    background-color: rgb(26, 106, 255);
+}
+
+.republican-b {
+    background-color: rgb(255, 74, 67);
+}
+
 .teal {
     color: #17a2b8;
 }
@@ -186,6 +194,15 @@ path.state {
     color: white;
     display: inline-block;
     padding: .5em;
+}
+
+#tooltip .tooltip-party-indicator {
+    position: absolute;
+    border-radius: 100000em;
+    top: 0.3em;
+    right: 0.3em;
+    width: 10px;
+    height: 10px;
 }
 
 .zoom {
